maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:22: error: not found: value etat
    } else { etat = 1 }
             ^